@@ -14,4 +14,4 @@ endif
 
 libLHAPDF_la_CPPFLAGS = $(AM_CPPFLAGS) $(BOOST_CPPFLAGS) $(YAMLCPP_CPPFLAGS)
 libLHAPDF_la_LDFLAGS = $(AM_LDFLAGS) -L$(prefix)/lib $(BOOST_LDFLAGS) $(YAMLCPP_LDFLAGS) -export-dynamic
-libLHAPDF_la_LIBADD = $(BOOST_LIBS) -lyaml-cpp
+libLHAPDF_la_LIBADD = $(BOOST_LIBS) $(YAMLCPP_LIBS)
