@@ -1,3 +1,7 @@
+2013-04-02  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Build system fixes... *almost* working on lxplus now! :-)
+
 2013-03-25  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Re-wrangling dump, comparison, and migration scripts.
